--- a/Hangman/Hangman.vcxproj
+++ b/Hangman/Hangman.vcxproj
@@ -77,6 +77,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
+    <Text Include="wordList.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Hangman.cpp" />
