--- a/Hangman/Hangman.vcxproj.filters
+++ b/Hangman/Hangman.vcxproj.filters
@@ -16,6 +16,9 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
+    <Text Include="wordList.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Hangman.cpp">
